<resources>
    <string name="app_name">Nutrition Analysis</string>
    <string name="nutrition_analysis">Nutrition Analysis</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_message">Enter an ingredient list for what you are cooking, like <b><font color="#69B56C">1 cup rice, 10 oz chickpeas</font></b>, etc.\nEnter each ingredient on a new line.</string>
    <string name="analyze">Analyze</string>
    <string name="field_required">This field is required</string>
    <string name="ingredients_summary">Ingredients Summary</string>
    <string name="total">Total</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="food">Food</string>
    <string name="calories">Calories</string>
    <string name="weight">Weight</string>
    <string name="cal">kcal</string>
    <string name="grams">g</string>
    <string name="total_nutrition">Total Nutrition</string>
    <string name="fat">Fat</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="carbohydrate_fiber_sugar">Carbohydrate (Fiber, Sugar)</string>
    <string name="protein">Protein</string>
    <string name="vitamin">Vitamin</string>
    <string name="calcium">Calcium</string>
    <string name="iron">Iron</string>
    <string name="potassium">Potassium</string>
</resources>