<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mvm"
            type="lobna.asset.nutrition.analysis.ui.analyze.AnalyzeIngredientsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.analyze.AnalyzeIngredientsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/nutrition_analysis"
                app:titleTextColor="@color/colorDarkText" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginTop="@dimen/margin_padding_size_medium"
                    android:text="@string/ingredients"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginTop="@dimen/margin_padding_size_small"
                    android:layout_marginEnd="@dimen/margin_padding_size_large"
                    android:text="@string/ingredients_message"
                    android:textColor="@color/colorGreyText"
                    android:textSize="@dimen/text_size_small" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginTop="@dimen/margin_padding_size_medium"
                    android:layout_marginEnd="@dimen/margin_padding_size_medium"
                    app:boxStrokeColor="@color/input_stroke_color"
                    app:boxStrokeErrorColor="@android:color/holo_red_dark"
                    app:boxStrokeWidth="2dp"
                    app:error="@{mvm.ingredientsErrorObservable}"
                    app:errorIconTint="@android:color/holo_red_dark"
                    app:errorTextColor="@android:color/holo_red_dark"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:hint="@string/ingredients"
                        android:inputType="textMultiLine"
                        android:minLines="4"
                        android:text="@={mvm.ingredientsTextObservable}"
                        android:textColor="@color/colorDarkText"
                        android:textColorHint="@color/colorGreyText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_padding_size_medium"
                    android:layout_marginTop="@dimen/margin_padding_size_large"
                    android:layout_marginEnd="@dimen/margin_padding_size_medium"
                    android:layout_marginBottom="@dimen/margin_padding_size_medium"
                    android:onClick="@{mvm::analyze}"
                    android:text="@string/analyze"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/colorGreen" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
